parser.output
Grammar

    0 $accept: program $end

    1 program: ε
    2        | statement_list

    3 statement_list: statement
    4               | statement_list statement

    5 statement: assignment_statement SEMICOLON
    6          | print_statement SEMICOLON
    7          | expression SEMICOLON
    8          | error SEMICOLON

    9 assignment_statement: LET USER_VARIABLE ASSIGN expression

   10 print_statement: PRINT expression

   11 expression: term
   12           | expression ADD term
   13           | expression SUB term

   14 term: factor
   15     | term MUL factor
   16     | term factor

   17 factor: primary
   18       | primary POW factor
   19       | UNARY_MINUS factor

   20 primary: NUMBER
   21        | VARIABLE
   22        | USER_VARIABLE
   23        | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8
    NUMBER <poly> (258) 20
    VARIABLE <poly> (259) 21
    USER_VARIABLE <sval> (260) 9 22
    LET (261) 9
    PRINT (262) 10
    ADD (263) 12
    SUB (264) 13
    MUL (265) 15
    POW (266) 18
    ASSIGN (267) 9
    LPAREN (268) 23
    RPAREN (269) 23
    SEMICOLON (270) 5 6 7 8
    UNARY_MINUS (271) 19
    IMPLICIT_MUL (272)


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    program (19)
        on left: 1 2
        on right: 0
    statement_list (20)
        on left: 3 4
        on right: 2 4
    statement (21)
        on left: 5 6 7 8
        on right: 3 4
    assignment_statement (22)
        on left: 9
        on right: 5
    print_statement (23)
        on left: 10
        on right: 6
    expression <poly> (24)
        on left: 11 12 13
        on right: 7 9 10 12 13 23
    term <poly> (25)
        on left: 14 15 16
        on right: 11 12 13 15 16
    factor <poly> (26)
        on left: 17 18 19
        on right: 14 15 16 18 19
    primary <poly> (27)
        on left: 20 21 22 23
        on right: 17 18


State 0

    0 $accept: • program $end

    error          shift, and go to state 1
    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LET            shift, and go to state 5
    PRINT          shift, and go to state 6
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    $end  reduce using rule 1 (program)

    program               go to state 9
    statement_list        go to state 10
    statement             go to state 11
    assignment_statement  go to state 12
    print_statement       go to state 13
    expression            go to state 14
    term                  go to state 15
    factor                go to state 16
    primary               go to state 17


State 1

    8 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 18


State 2

   20 primary: NUMBER •

    $default  reduce using rule 20 (primary)


State 3

   21 primary: VARIABLE •

    $default  reduce using rule 21 (primary)


State 4

   22 primary: USER_VARIABLE •

    $default  reduce using rule 22 (primary)


State 5

    9 assignment_statement: LET • USER_VARIABLE ASSIGN expression

    USER_VARIABLE  shift, and go to state 19


State 6

   10 print_statement: PRINT • expression

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    expression  go to state 20
    term        go to state 15
    factor      go to state 16
    primary     go to state 17


State 7

   23 primary: LPAREN • expression RPAREN

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    expression  go to state 21
    term        go to state 15
    factor      go to state 16
    primary     go to state 17


State 8

   19 factor: UNARY_MINUS • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    factor   go to state 22
    primary  go to state 17


State 9

    0 $accept: program • $end

    $end  shift, and go to state 23


State 10

    2 program: statement_list •
    4 statement_list: statement_list • statement

    error          shift, and go to state 1
    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LET            shift, and go to state 5
    PRINT          shift, and go to state 6
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    $end  reduce using rule 2 (program)

    statement             go to state 24
    assignment_statement  go to state 12
    print_statement       go to state 13
    expression            go to state 14
    term                  go to state 15
    factor                go to state 16
    primary               go to state 17


State 11

    3 statement_list: statement •

    $default  reduce using rule 3 (statement_list)


State 12

    5 statement: assignment_statement • SEMICOLON

    SEMICOLON  shift, and go to state 25


State 13

    6 statement: print_statement • SEMICOLON

    SEMICOLON  shift, and go to state 26


State 14

    7 statement: expression • SEMICOLON
   12 expression: expression • ADD term
   13           | expression • SUB term

    ADD        shift, and go to state 27
    SUB        shift, and go to state 28
    SEMICOLON  shift, and go to state 29


State 15

   11 expression: term •
   15 term: term • MUL factor
   16     | term • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    MUL            shift, and go to state 30
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    $default  reduce using rule 11 (expression)

    factor   go to state 31
    primary  go to state 17


State 16

   14 term: factor •

    $default  reduce using rule 14 (term)


State 17

   17 factor: primary •
   18       | primary • POW factor

    POW  shift, and go to state 32

    $default  reduce using rule 17 (factor)


State 18

    8 statement: error SEMICOLON •

    $default  reduce using rule 8 (statement)


State 19

    9 assignment_statement: LET USER_VARIABLE • ASSIGN expression

    ASSIGN  shift, and go to state 33


State 20

   10 print_statement: PRINT expression •
   12 expression: expression • ADD term
   13           | expression • SUB term

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 10 (print_statement)


State 21

   12 expression: expression • ADD term
   13           | expression • SUB term
   23 primary: LPAREN expression • RPAREN

    ADD     shift, and go to state 27
    SUB     shift, and go to state 28
    RPAREN  shift, and go to state 34


State 22

   19 factor: UNARY_MINUS factor •

    $default  reduce using rule 19 (factor)


State 23

    0 $accept: program $end •

    $default  accept


State 24

    4 statement_list: statement_list statement •

    $default  reduce using rule 4 (statement_list)


State 25

    5 statement: assignment_statement SEMICOLON •

    $default  reduce using rule 5 (statement)


State 26

    6 statement: print_statement SEMICOLON •

    $default  reduce using rule 6 (statement)


State 27

   12 expression: expression ADD • term

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    term     go to state 35
    factor   go to state 16
    primary  go to state 17


State 28

   13 expression: expression SUB • term

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    term     go to state 36
    factor   go to state 16
    primary  go to state 17


State 29

    7 statement: expression SEMICOLON •

    $default  reduce using rule 7 (statement)


State 30

   15 term: term MUL • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    factor   go to state 37
    primary  go to state 17


State 31

   16 term: term factor •

    $default  reduce using rule 16 (term)


State 32

   18 factor: primary POW • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    factor   go to state 38
    primary  go to state 17


State 33

    9 assignment_statement: LET USER_VARIABLE ASSIGN • expression

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    expression  go to state 39
    term        go to state 15
    factor      go to state 16
    primary     go to state 17


State 34

   23 primary: LPAREN expression RPAREN •

    $default  reduce using rule 23 (primary)


State 35

   12 expression: expression ADD term •
   15 term: term • MUL factor
   16     | term • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    MUL            shift, and go to state 30
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    $default  reduce using rule 12 (expression)

    factor   go to state 31
    primary  go to state 17


State 36

   13 expression: expression SUB term •
   15 term: term • MUL factor
   16     | term • factor

    NUMBER         shift, and go to state 2
    VARIABLE       shift, and go to state 3
    USER_VARIABLE  shift, and go to state 4
    MUL            shift, and go to state 30
    LPAREN         shift, and go to state 7
    UNARY_MINUS    shift, and go to state 8

    $default  reduce using rule 13 (expression)

    factor   go to state 31
    primary  go to state 17


State 37

   15 term: term MUL factor •

    $default  reduce using rule 15 (term)


State 38

   18 factor: primary POW factor •

    $default  reduce using rule 18 (factor)


State 39

    9 assignment_statement: LET USER_VARIABLE ASSIGN expression •
   12 expression: expression • ADD term
   13           | expression • SUB term

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 9 (assignment_statement)
